--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -91,14 +91,16 @@
                                                         <div id="prdModify">
                                                             <li>
                                                                 {% if orderDetail.prd.option1 != "" %}
+                                                                    <input type="hidden" id="alreadyOption_{{forloop.counter0}}_1" name="alreadyOption_{{forloop.counter0}}_1" value="{{orderDetail.option1}}">
                                                                     <input type="hidden" id="minus_{{forloop.counter0}}_1" name="minus_{{forloop.counter0}}_1" value="0">
                                                                     <select id="options_{{forloop.counter0}}_1" name="options_{{forloop.counter0}}_1" style="float:right; width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myOption(this.value, {{forloop.counter0}}, 1)">
                                                                         <option value="0">----------------옵션------</option>
                                                                         <option value="0">선택없음</option>
-                                                                        <option value={{orderDetail.prd.option1_price}}>{{orderDetail.prd.option1}} (+{{orderDetail.prd.option1_price}})</option>
+                                                                        <option value={{orderDetail.prd.option1_price}} >{{orderDetail.prd.option1}} (+{{orderDetail.prd.option1_price}})</option>
                                                                      </select>
                                                                 {% endif %}
                                                                 {% if orderDetail.prd.option2 != "" %}
+                                                                    <input type="hidden" id="alreadyOption_{{forloop.counter0}}_2" name="alreadyOption_{{forloop.counter0}}_2" value="{{orderDetail.option2}}">
                                                                     <input type="hidden" id="minus_{{forloop.counter0}}_2" name="minus_{{forloop.counter0}}_2" value="0">
                                                                     <select id="options_{{forloop.counter0}}_2" name="options_{{forloop.counter0}}_2" style="float:right; width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myOption(this.value, {{forloop.counter0}}, 2)">
                                                                         <option value="0">----------------옵션------</option>
@@ -107,6 +109,7 @@
                                                                      </select>
                                                                  {% endif %}
                                                                  {% if orderDetail.prd.option3 != "" %}
+                                                                    <input type="hidden" id="alreadyOption_{{forloop.counter0}}_3" name="alreadyOption_{{forloop.counter0}}_3" value="{{orderDetail.option3}}">
                                                                     <input type="hidden" id="minus_{{forloop.counter0}}_3" name="minus_{{forloop.counter0}}_3" value="0">
                                                                      <select id="options_{{forloop.counter0}}_3" name="options_{{forloop.counter0}}_3" style="float:right; width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myOption(this.value, {{forloop.counter0}}, 3)">
                                                                         <option value="0">----------------옵션------</option>
@@ -609,7 +612,7 @@
             var prd_price = 0;
             var prd_total_price = 0;
             var delivery = 0;
-            var option = 0;
+
             var count = 1;
             var first = 1;
 
@@ -625,45 +628,56 @@
                 prd_delivery_name ="prd_delivery_price_" + i;
                 prd_option_name = "options_" + i;
 
-                prd_price_format = numberWithCommas(document.getElementById(prd_price_name).innerText);
+                prd_price = document.getElementById(prd_price_name).innerText;
+                document.getElementById(prd_price_name).innerText = numberWithCommas(prd_price);
 
 				if (chks[i].checked == true)
 				{
+				    var option = 0;
 				    // 여러 상품 중 하나만 배송비 표시하기 위한 변수
-				    prd_price = document.getElementById(prd_price_name).innerText;
 				    prd_price = removeComma(prd_price);
 				    count = document.getElementById(quantity_name).value;
 
-                    // 첫 로딩 가격 안맞음
-				    prd_option1_name = "options_" + String(i) +"_1";
-                    prd_option2_name = "options_" + String(i) +"_2";
-                    prd_option3_name = "options_" + String(i) +"_3";
+                    var already_option1 = document.getElementById("alreadyOption_" + i + "_1");
+                    var already_option2 = document.getElementById("alreadyOption_" + i + "_2");
+                    var already_option3 = document.getElementById("alreadyOption_" + i + "_3");
+
+                    var prd_option1_name = "options_" + i +"_1";
+                    var prd_option2_name = "options_" + i +"_2";
+                    var prd_option3_name = "options_" + i +"_3";
 
                     var option1 = document.getElementById(prd_option1_name);
-                    var option2= document.getElementById(prd_option2_name);
-                    var option3= document.getElementById(prd_option3_name);
+                    var option2 = document.getElementById(prd_option2_name);
+                    var option3 = document.getElementById(prd_option3_name);
+
+                    if (already_option1 != null && already_option1.value > -1)
+                        option1.selectedIndex = 2;
+                    if (already_option2 != null && already_option2.value > -1)
+                        option2.selectedIndex = 2;
+                    if (already_option3 != null && already_option3.value > -1)
+                        option3.selectedIndex = 2;
 
                     if(option1 != null && option1.selectedIndex > 0)
                     {
-                        var option1 = option1.value;
-                        option1 *= 1;
-                        option += option1;
+                        var option1_val = option1.value;
+                        option1_val *= 1;
+                        option += option1_val;
                         var minus_option1_name = "minus_" + i +"_1";
                         document.getElementById(minus_option1_name).value = option1;
                     }
                     if(option2 != null && option2.selectedIndex > 0)
                     {
-                        var option2 = option2.value;
-                        option2 *= 1;
-                        option += option2;
+                        var option2_val = option2.value;
+                        option2_val *= 1;
+                        option += option2_val;
                         var minus_option2_name = "minus_" + i +"_2";
                         document.getElementById(minus_option2_name).value = option2;
                     }
                     if(option3 != null && option3.selectedIndex > 0)
                     {
-                        var option3 = option3.value;
-                        option3 *= 1;
-                        option += option3;
+                        var option3_val = option3.value;
+                        option3_val *= 1;
+                        option += option3_val;
                         var minus_option3_name = "minus_" + i +"_3";
                         document.getElementById(minus_option3_name).value = option3;
                     }
@@ -694,10 +708,7 @@
 				    delivery = 0;
 				    document.getElementById(prd_delivery_name).innerHTML = "<strong>" + delivery + "</<strong>";
 				}
-
-				document.getElementById(prd_price_name).innerText = prd_price_format;
 			}
-
 			all_total_price(total_summary_price);
         }
 
