--- a/main/templates/class/class_list.html
+++ b/main/templates/class/class_list.html
@@ -2,83 +2,88 @@
 {% load static %}
 
 <div class="wrap">
-<!-- sub visual -->
-<section class="sub_visual">
-    <div class="section_wrap">
-        <div class="slogan">
-                    <span class="bigSlg">
-                        코딩키트
-                    </span>
-            <p>
-                <span class="brown">"크리에이티브 코딩키트"</span>로 배우는 런코딩!<br/>
-                지금 시작해보세요.
-            </p>
+    <!-- sub visual -->
+    <section class="sub_visual">
+        <div class="section_wrap">
+            <div class="slogan">
+                        <span class="bigSlg">
+                            코딩키트
+                        </span>
+                <p>
+                    <span class="brown">"크리에이티브 코딩키트"</span>로 배우는 런코딩!<br/>
+                    지금 시작해보세요.
+                </p>
+            </div>
+            <img class="subVisual codingKit" src="{% static 'resource/img/sub/sv_codingKit.png' %}" alt="코딩키트">
         </div>
-        <img class="subVisual codingKit" src="{% static 'resource/img/sub/sv_codingKit.png' %}" alt="코딩키트">
-    </div>
-</section>
-<!-- sub visual -->
+    </section>
+    <!-- sub visual -->
 
-<!-- codingKit list -->
-<div class="codingKit_list">
-    <div class="lecture_list">
-        <ul>
-             <form id="class_form" method="POST" action="/class_detail/">
-                {% csrf_token %}
-                <input type="hidden" id="detail_prd_code" name="detail_prd_code" value="">
-            </form>
+    <!-- codingKit list -->
+    <div class="codingKit_list">
+        <div class="lecture_list">
+            <ul>
+                 <form id="class_form" method="POST" action="/class_detail/">
+                    {% csrf_token %}
+                    <input type="hidden" id="detail_prd_code" name="detail_prd_code" value="">
+                </form>
 
-             {% for classList_detail in class_list_detail %}
-            <li class="list01">
-                <input type="hidden" name="idxs[]" value={{forloop.counter0}} >
-                <a href="javascript:void(0);" onclick="javscript:goClassDetail({{classList_detail.prd_code}});">
-                    <img src={{classList_detail.gif}} alt="코딩키트 썸네일">
-                </a>
+                 {% for classList_detail in class_list_detail %}
+                <li class="list01">
+                    <input type="hidden" name="idxs[]" value={{forloop.counter0}} >
+                    <a href="javascript:void(0);" onclick="javascript:goClassDetail({{classList_detail.prd_code}});">
+                        <img src={{classList_detail.gif}} alt="코딩키트 썸네일">
+                    </a>
 
-                <div class="text_area">
-                    <span>
-                        <small class="type">{{classList_detail.keyword}}</small>
-                        {{classList_detail.title}}
-                    </span>
-                    <div class="ckInfo">
-                        <span class="period">
-                            <img src="{% static 'resource/img/sub/ico_calendar.png' %}" alt="기간">
-                            {{classList_detail.period}}개월 과정
+                    <div class="text_area">
+                        <span>
+                            <small class="type">{{classList_detail.keyword}}</small>
+                            {{classList_detail.title}}
                         </span>
-                        <span class="num">
-                            <img src="{% static 'resource/img/sub/ico_play.png' %}" alt="강의 수">
-                            {{classList_detail.class_count}}개 강의
-                        </span>
-                        <div id="prd_price_{{forloop.counter0}}" >
-                            <span class="price">
-                                {{classList_detail.price}} 원
+                        <div class="ckInfo">
+                            <span class="period">
+                                <img src="{% static 'resource/img/sub/ico_calendar.png' %}" alt="기간">
+                                {{classList_detail.period}}개월 과정
                             </span>
+                            <span class="num">
+                                <img src="{% static 'resource/img/sub/ico_play.png' %}" alt="강의 수">
+                                {{classList_detail.class_count}}개 강의
+                            </span>
+                            <div id="prd_price_{{forloop.counter0}}" >
+                                <span class="price">
+                                    {{classList_detail.price}} 원
+                                </span>
+                            </div>
                         </div>
                     </div>
+                </li>
+                {% endfor%}
+            </ul>
+        </div>
+        <div class="filter_area fixed">
+            <div class="fixedArea">
+                <div class="search_area">
+                    <span>SEARCH</span>
+                    <div class="input_area">
+                        <form id="search_form" method="post" action="/search/">
+                            {% csrf_token %}
+                            <input type="text" name="src_inp"  id="src_inp" placeholder="검색어 입력">
+                        </form>
+                        <button type="button" onclick="javascript:goSearch();"><img src="{% static 'resource/img/sub/ico_search.png' %}" alt="검색"></button>
+                    </div>
                 </div>
-            </li>
-            {% endfor%}
-        </ul>
-        <!--<a id="more" class="btn list_more">더보기</a>-->
-    </div>
-    <div class="filter_area fixed">
-        <div class="search_area">
-            <span>SEARCH</span>
-            <div class="input_area">
-                <form id="search_form" method="post" action="/search/">
-                    {% csrf_token %}
-                    <input type="text" name="src_inp" id="src_inp" placeholder="검색어 입력">
-                </form>
-                <button type="button" onclick="javascript:goSearch();"><img src="{% static 'resource/img/sub/ico_search.png' %}" alt="검색"></button>
+                <div class="category">
+                    <span>CATEGORIES</span>
+                    <button type="button" style="cursor:pointer" class="btn_filter" onclick="javascript:goSearchCategory('all');">전체</button>
+                    <button type="button" style="cursor:pointer" class="btn_filter" onclick="javascript:goSearchCategory('아두이노');">아두이노</button>
+                    <button type="button" style="cursor:pointer" class="btn_filter" onclick="javascript:goSearchCategory('엠블럭');">엠블럭</button>
+                </div>
             </div>
         </div>
-        <div class="category">
-            <span>CATEGORIES</span>
-            <button type="button" style="cursor:pointer" class="btn_filter" onclick="javascript:goSearchCategory('all');">전체</button>
-            <button type="button" style="cursor:pointer" class="btn_filter" onclick="javascript:goSearchCategory('아두이노');">아두이노</button>
-            <button type="button" style="cursor:pointer" class="btn_filter" onclick="javascript:goSearchCategory('엠블럭');">엠블럭</button>
-        </div>
     </div>
+
+    {% include "common/banner_bottom.html" %}
+    {% include "common/footer.html" %}
 </div>
 
 <script>
@@ -86,6 +91,24 @@
      {
           return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
      }
+
+     $(window).scroll(function() {
+        var scroll_top = $(window).scrollTop();
+        if (scroll_top >= $(".sub_visual").outerHeight()) {
+            $(".filter_area").addClass("scr");
+        } else {
+            $(".filter_area").removeClass("scr");
+        }
+    });
+
+    $(window).scroll(function () {
+        var scroll_top = $(window).scrollTop();
+        if ( $(".sub_visual").outerHeight() + $(".codingKit_list").height() <= scroll_top + $(".fixedArea").height()) {
+            $(".scr").addClass("end");
+        } else {
+            $(".scr").removeClass("end");
+        }
+    });
 
      $(document).ready(function() {
             var chks = document.getElementsByName('idxs[]');
@@ -99,24 +122,6 @@
              }
 
       });
-
-    $(window).scroll(function() {
-        var scroll_top = $(window).scrollTop();
-        if (scroll_top >= $(".sub_visual").outerHeight()) {
-            $(".filter_area").addClass("scr");
-        } else {
-            $(".filter_area").removeClass("scr");
-        }
-    });
-
-    $(window).scroll(function() {
-        var scroll_top = $(window).scrollTop();
-        if (scroll_top >= $(".class_list").outerHeight() + 100) {
-            $(".scr").addClass("end");
-        } else {
-            $(".scr").removeClass("end");
-        }
-    });
 
     function goClassDetail(prdCode)
     {
@@ -136,8 +141,7 @@
     }
 
 </script>
-{% include "common/banner_bottom.html" %}
-{% include "common/footer.html" %}
+
 
 
 </body>
