--- a/main/templates/main/index_runcoding.html
+++ b/main/templates/main/index_runcoding.html
@@ -17,7 +17,7 @@
                     </span>
                 <span class="bigSlg">
                         <span class="sky">CODE. MAKE. CREATE</span><br/>
-                        상상을 현실로 만드는 런코딩
+                        상상을 현실로 만드는 코딩학습 런코딩
                     </span>
                 <a href="/class/">시작하기</a>
             </div>
@@ -47,14 +47,18 @@
                         온라인 강의는 무료!
                     </span>
                 <p>
-                    내가 생각한 알고리즘으로 코딩을 한다면<br/>
-                    어떤 일이 일어날까?<br/><br/>
+                    설명서를 따라 만들어보는 코딩 학습 No!<br/>
+                    10년차 프로그래머의 원리 쏙쏙 온라인강의 함께 <br/>
+                    쉽게! 뚝딱! 만들어보는 코딩 키트<br/><br/>
 
-                    10년차 프로그래머의 핵심 쏙쏙 온라인 강의와<br/>
-                    디자인 키트로 쉽게! 뚝딱! 만들어보자<br/><br/>
+                    자체 개발 인공지능 프로그램 “러닝봇”,<br/>
+                    카메라 센서를 가지고<br/>
+                    어렵게만 느껴졌던 인공지능 AI 코딩도 뚝딱!<br/><br/>
 
-                    어렵게만 생각되었던 인공지능 AI 코딩도 뚝딱!<br/>
-                    런코딩과 함께 집에서 다양한 FUN MAKER가 되어봐!
+                    온라인 강의 속 퀴즈 풀이를 통한 응용력 향상<br/><br/>
+
+                    강의가 끝나면 어느새 나만의 알고리즘으로 다른 <br/>
+                    창작물을 만들어 내는 MAKER가 되어 있을거야!
                 </p>
             </div>
         </div>
@@ -66,27 +70,32 @@
                         누가 무엇을 배울 수 있을까?
                     </span>
                 <p>
-                    블럭코딩으로 코딩의 개념을 이해했다면 실제 코딩을 해보고 어떤 결과물로 이어지는지 경험해봐!<br/>
-                    강의 속 퀴즈로 개념을 연습해서 같은 키트로 또다른 MAKER가 되어봐!
+                    “런코딩” 에서는 이제 막 코딩을 시작하는 <string>코딩 베이비</string>들을 위한 엠블럭 버전(스크래치 언어 기반 블럭코딩)과 <br/>
+                    실전 프로그래밍 언어로 코딩해 볼 수 있는 코딩 주니어들을 위한 아두이노 버전을 나누어 강의가 제작 되었습니다.
                 </p>
-                <a href="/class/" class="btn link">시작하기</a>
+                <a href="/class/" class="btn link">더 알아보기</a>
             </div>
             <div class="benefit_list">
                 <ul>
                     <li class="top">
                         <div class="text_area">
-                            <span>코딩원리가 궁금한 <span>JUNIOR</span></span>
+                            <span>코딩을 이제 막 시작한 <span>BABY</span></span>
                             <p>
-                                초등학교 고학년부터 중학생까지 크리에이티브 메이커 활동으로<br/>
-                                원리와 재미를 한번에!
+                                이제 막 코딩을 시작하는 코딩 베이비들은 엠블럭 강의를 선택해 주셔야 합니다. <br/>
+                                스크래치 언어 기반의 블럭코딩(엠블럭 프로그램을 이용해요) 과<br/>
+                                아두이노 보드 그리고 AI(인공지능) 코딩을 다뤄 봅니다.
+
                             </p>
                         </div>
                     </li>
                     <li class="bottom">
                         <div class="text_area">
-                            <span>AI코딩이 궁금한 <span>JUNIOR</span></span>
+                            <span>AI코딩이 궁실전 프로그래밍 언어로 코딩해보는 <span>JUNIOR</span></span>
                             <p>
-                                런코딩이 직접 개발한 “러닝봇”과 함께 AI 코딩을 쉽게! 뚝닥!
+                                교육용 프로그래밍 언어인 스크래치 언어가 아닌<br/>
+                                실제 프로그래밍 언어와 명령어로 직접 코딩을 해 보기를 <br/>
+                                원하는 코딩 주니어들은 아두이노 코딩 수업을 통해 배울 수 있습니다.
+
                             </p>
                         </div>
                     </li>
@@ -115,11 +124,15 @@
         </div>
 
         <div class="ourClass">
-            <span class="big_title">영상 강의부터 키트 응용하기까지</span>
+            <span class="big_title">융합적 사고를 위한 디자인 코딩 키트</span>
             <p>
-                온라인 강의 내용으로 코딩에 대한 개념 학습으로 기본기를 다지고<br/>
-                예제와 퀴즈로 응용 학습까지!<br/>
-                마지막으로 코딩키트까지 만들어 실생활에 적용되는 코딩까지 마스터!
+                쉽게! 뚝딱!<br/> 런코딩의 목표에 맞게 교육할 수 있도록<br/>
+                “작은컴퓨터＂라고 부르는 아두이노를 접목한 코딩키트 입니다. <br/><br/>
+
+                소프트웨어 교육의 목표인 융합적 사고의 취지에 맞게<br/>
+                상상을 더 풍부하게 만들어 줄 수 있는 디자인 요소를 가미한<br/>
+                과학S, 기술T, 공학E, 예술A, 수학M, STEAM 융학 교육 방식의 디자인 키트입니다.
+
             </p>
             <div class="link_area">
                 <a class="link big">
@@ -151,9 +164,9 @@
                                 <span class="name">키트구입</span>
                             </span>
                         <p class="pa_description">
-                            난이도에 맞춰<br/>
-                            코딩 키트를 구입하면<br/>
-                            집으로 슝!
+                            학습 난이도에 맞춰<br/>
+                            키트를 구입하면<br/>
+                            택배로 슝 배송!
                         </p>
                         <!-- <a href="" class="btn pa">Explore</a> -->
                     </li>
@@ -165,9 +178,11 @@
                                 <span class="name">코딩하기</span>
                             </span>
                         <p class="pa_description">
-                            난이도에 맞춰<br/>
-                            코딩 키트를 구입하면<br/>
-                            집으로 슝!
+                            배송 받은<br/>
+                            코딩키트를 가지고<br/>
+                            홈페이지에서<br/>
+                            커리큘럼에 맞춰<br/>
+                            학습 시작!
                         </p>
                         <!-- <a href="" class="btn pa">Explore</a> -->
                     </li>
@@ -179,9 +194,11 @@
                                 <span class="name">만들기</span>
                             </span>
                         <p class="pa_description">
-                            난이도에 맞춰<br/>
-                            코딩 키트를 구입하면<br/>
-                            집으로 슝!
+                            조립한 디자인 키트와<br/>
+                            아두이노 보드에<br/>
+                            코드를 업로드하며<br/>
+                            움직이는 결과물을<br/>
+                            만나봐!
                         </p>
                         <!-- <a href="" class="btn pa">Explore</a> -->
                     </li>
@@ -193,9 +210,11 @@
                                 <span class="name">응용하기</span>
                             </span>
                         <p class="pa_description">
-                            난이도에 맞춰<br/>
-                            코딩 키트를 구입하면<br/>
-                            집으로 슝!
+                            다양한 퀴즈로<br/>
+                            원리가 이해 되었다면<br/>
+                            나만의 아이디어로<br/>
+                            다른 결과물을<br/>
+                            만들어볼까?
                         </p>
                         <!-- <a href="" class="btn pa">Explore</a> -->
                     </li>
