--- a/main/templates/comunity/coding_comunity.html
+++ b/main/templates/comunity/coding_comunity.html
@@ -45,11 +45,11 @@
                         {{comunityList.description}}
 
                         {% if comunityList.sub_description1 != "" %}
-                        <br/>{{comunityList.sub_description1}}
+                        <br/><br/>{{comunityList.sub_description1}}
                         {% endif%}
 
                         {% if comunityList.sub_description2 != "" %}
-                        <br/>{{comunityList.sub_description2}}
+                        <br/><br/>{{comunityList.sub_description2}}
                         {% endif%}
                     </p>
                 </div>
