--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -69,6 +69,9 @@
                                                     <input type="hidden" id="total_option_prd_price" name="total_option_prd_price" value="0">
                                                     <input type="hidden" id="total_option_coupon_prd_price" name="total_option_coupon_prd_price" value="0">
                                                     <input type="hidden" id="coupon_num" name="coupon_num" value="0">
+                                                    <input type="hidden" id="payway" name="payway" value="0">
+                                                    <input type="hidden" id="depositName" name="depositName" value="0">
+                                                    <input type="hidden" id="depositReceipt" name="depositReceipt" value="D">
                                                     <td>
                                                         <input type="hidden" name="orderIdxs_{{forloop.counter0}}" id="orderIdxs_{{forloop.counter0}}" value={{orderDetail.order_idx}}>
                                                         <input type="hidden" id="len" name="len" value="0">
@@ -91,8 +94,9 @@
                                                         <div id="prdModify">
                                                             <li>
                                                                 {% if orderDetail.prd.option1 != "" %}
-                                                                    <input type="hidden" id="alreadyOption_{{forloop.counter0}}_1" name="alreadyOption_{{forloop.counter0}}_1" value="{{orderDetail.option1}}">
+                                                                    <input type="hidden" id="alreadyOption_{{forloop.counter0}}_1" name="alreadyOption_{{forloop.counter0}}_1" value="{{orderDetail.option1_selectNum}}">
                                                                     <input type="hidden" id="minus_{{forloop.counter0}}_1" name="minus_{{forloop.counter0}}_1" value="0">
+                                                                    <input type="hidden" id="option_idx_{{forloop.counter0}}_1" name="option_idx_{{forloop.counter0}}_1" value="0">
                                                                     <select id="options_{{forloop.counter0}}_1" name="options_{{forloop.counter0}}_1" style="float:right; width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myOption(this.value, {{forloop.counter0}}, 1)">
                                                                         <option value="0">----------------옵션------</option>
                                                                         <option value="0">선택없음</option>
@@ -100,8 +104,9 @@
                                                                      </select>
                                                                 {% endif %}
                                                                 {% if orderDetail.prd.option2 != "" %}
-                                                                    <input type="hidden" id="alreadyOption_{{forloop.counter0}}_2" name="alreadyOption_{{forloop.counter0}}_2" value="{{orderDetail.option2}}">
+                                                                    <input type="hidden" id="alreadyOption_{{forloop.counter0}}_2" name="alreadyOption_{{forloop.counter0}}_2" value="{{orderDetail.option2_selectNum}}">
                                                                     <input type="hidden" id="minus_{{forloop.counter0}}_2" name="minus_{{forloop.counter0}}_2" value="0">
+                                                                    <input type="hidden" id="option_idx_{{forloop.counter0}}_2" name="option_idx_{{forloop.counter0}}_2" value="0">
                                                                     <select id="options_{{forloop.counter0}}_2" name="options_{{forloop.counter0}}_2" style="float:right; width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myOption(this.value, {{forloop.counter0}}, 2)">
                                                                         <option value="0">----------------옵션------</option>
                                                                         <option value="0">선택없음</option>
@@ -109,8 +114,9 @@
                                                                      </select>
                                                                  {% endif %}
                                                                  {% if orderDetail.prd.option3 != "" %}
-                                                                    <input type="hidden" id="alreadyOption_{{forloop.counter0}}_3" name="alreadyOption_{{forloop.counter0}}_3" value="{{orderDetail.option3}}">
+                                                                    <input type="hidden" id="alreadyOption_{{forloop.counter0}}_3" name="alreadyOption_{{forloop.counter0}}_3" value="{{orderDetail.option3_selectNum}}">
                                                                     <input type="hidden" id="minus_{{forloop.counter0}}_3" name="minus_{{forloop.counter0}}_3" value="0">
+                                                                    <input type="hidden" id="option_idx_{{forloop.counter0}}_3" name="option_idx_{{forloop.counter0}}_3" value="0">
                                                                      <select id="options_{{forloop.counter0}}_3" name="options_{{forloop.counter0}}_3" style="float:right; width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myOption(this.value, {{forloop.counter0}}, 3)">
                                                                         <option value="0">----------------옵션------</option>
                                                                         <option value="0">선택없음</option>
@@ -290,14 +296,29 @@
                                  <div class="panel panel-default border-radius-none margin-top-30">
                                       <div class="panel-heading bg-color-gray font-14"><strong>결제방법</strong></div>
                                       <div class="panel-body padding-all-15 font-14">
-                                           <ui class="margin-bottom-0">
+                                           <ui class="margin-bottom-20">
                                                <li>
-                                                   <div style="width:100px; padding-right:10px">
-                                                        <input type="radio" checked>
-                                                        <span>신용카드</span>
+                                                  {% for payway in payway_info %}
+                                                   <div class="order_payinfo">
+                                                        <span><input type="radio" name="payway" value="{{payway.value}}" onchange="myPayway(this.value)" checked>&nbsp;{{payway.name}}</span>
                                                    </div>
-
+                                                   {% endfor %}
                                                </li>
+                                               <br/>
+                                           </ui>
+                                      </div>
+                                     <div class="panel-body padding-all-15 font-14" id="deposit" style="display:none">
+                                           <ui class="margin-bottom-20">
+                                               <li>
+                                                     <div>
+                                                        <span><strong>국민은행&nbsp;:&nbsp;422001-04-219407 (런코딩)</strong>&nbsp;</span><br/><br/>
+                                                        <span>입금자명
+                                                            <input type="text" name="deposit_name" id="deposit_name" style="float:center; width:20%; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;">
+                                                            <input type="checkbox" name="deposit_receipt" id="deposit_receipt" value="A"> 현금영수증 신청
+                                                        </span>
+                                                     </div>
+                                               </li>
+                                               <br/>
                                            </ui>
                                       </div>
                                  </div>
@@ -383,7 +404,8 @@
 {% include "common/banner_bottom.html" %}
 {% include "common/footer.html" %}
     <script>
-
+       var deposit = 'deposit';
+       var credit = 'credit';
 
        function removeComma(str)
        {
@@ -537,17 +559,26 @@
          {
             var chks = document.getElementsByName('idxs[]');
             var order_idx = '';
+
              for (var i=0,m=chks.length;i<m ;i++)
              {
                 if (chks[i].checked == true)
                 {
-                    prd_option1_name = "options_" + String(i) +"_1";
-                    prd_option2_name = "options_" + String(i) +"_2";
-                    prd_option3_name = "options_" + String(i) +"_3";
+                    var prd_option1_name = "options_" + i +"_1";
+                    var prd_option2_name = "options_" + i +"_2";
+                    var prd_option3_name = "options_" + i +"_3";
 
                     var option1 = document.getElementById(prd_option1_name);
-                    var option2= document.getElementById(prd_option2_name);
-                    var option3= document.getElementById(prd_option3_name);
+                    var option2 = document.getElementById(prd_option2_name);
+                    var option3 = document.getElementById(prd_option3_name);
+
+                    var prd_option1_idx = "option_idx_" + i +"_1";
+                    var prd_option2_idx = "option_idx_" + i +"_2";
+                    var prd_option3_idx = "option_idx_" + i +"_3";
+
+                    var option1_idx = document.getElementById(prd_option1_idx);
+                    var option2_idx = document.getElementById(prd_option2_idx);
+                    var option3_idx = document.getElementById(prd_option3_idx);
 
                     if(option1 != null && option1.selectedIndex == 0)
                     {
@@ -569,6 +600,13 @@
                     }
                     else
                     {
+                        if(option1 != null)
+                            option1_idx.value = option1.selectedIndex;
+                        if(option2 != null)
+                            option2_idx.value = option2.selectedIndex;
+                        if(option3 != null)
+                            option3_idx.value = option3.selectedIndex;
+
                         order_idx += i + ",";
                     }
                 }
@@ -576,10 +614,29 @@
 
              if(order_idx != "")
              {
-                 var addr_checked = $(":input:radio[name=addr]:checked").val();
-                 $("input[type=hidden][name=idx]").val(order_idx);
-                 $("input[type=hidden][name=addr_num]").val(addr_checked);
-                 document.getElementById("order_form").submit();
+                var payway_checked =  $("input[type=radio][name=payway]:checked").val();
+
+
+                if(payway_checked == deposit)
+                {
+                    var name = document.getElementById("deposit_name").value;
+                    if(name == "")
+                    {
+                         $("#res_msg").text("입금자 명을 입력해주세요.");
+                         $('div.modal').modal();
+                         return false;
+                    }
+
+                    $("input[type=hidden][name=depositName]").val(name);
+                    $("input[type=hidden][name=depositReceipt]").val( document.getElementById("deposit_receipt").value);
+                }
+
+                var addr_checked = $(":input:radio[name=addr]:checked").val();
+
+                $("input[type=hidden][name=idx]").val(order_idx);
+                $("input[type=hidden][name=addr_num]").val(addr_checked);
+                $("input[type=hidden][name=payway]").val(payway_checked);
+                document.getElementById("order_form").submit();
 
              }
          }
@@ -650,12 +707,32 @@
                     var option2 = document.getElementById(prd_option2_name);
                     var option3 = document.getElementById(prd_option3_name);
 
-                    if (already_option1 != null && already_option1.value > -1)
-                        option1.selectedIndex = 2;
-                    if (already_option2 != null && already_option2.value > -1)
-                        option2.selectedIndex = 2;
-                    if (already_option3 != null && already_option3.value > -1)
-                        option3.selectedIndex = 2;
+                    if(already_option1 != null)
+                    {
+                        option1.selectedIndex = already_option1.value;
+                    }
+                    else
+                    {
+                        option1.selectedIndex = 0;
+                    }
+
+                    if(already_option2 != null)
+                    {
+                        option2.selectedIndex = already_option2.value;
+                    }
+                    else
+                    {
+                        option1.selectedIndex = 0;
+                    }
+
+                    if(already_option3 != null)
+                    {
+                        option3.selectedIndex = already_option3.value;
+                    }
+                    else
+                    {
+                        option1.selectedIndex = 0;
+                    }
 
                     if(option1 != null && option1.selectedIndex > 0)
                     {
@@ -663,7 +740,7 @@
                         option1_val *= 1;
                         option += option1_val;
                         var minus_option1_name = "minus_" + i +"_1";
-                        document.getElementById(minus_option1_name).value = option1;
+                        document.getElementById(minus_option1_name).value = option1_val;
                     }
                     if(option2 != null && option2.selectedIndex > 0)
                     {
@@ -671,7 +748,7 @@
                         option2_val *= 1;
                         option += option2_val;
                         var minus_option2_name = "minus_" + i +"_2";
-                        document.getElementById(minus_option2_name).value = option2;
+                        document.getElementById(minus_option2_name).value = option2_val;
                     }
                     if(option3 != null && option3.selectedIndex > 0)
                     {
@@ -679,7 +756,7 @@
                         option3_val *= 1;
                         option += option3_val;
                         var minus_option3_name = "minus_" + i +"_3";
-                        document.getElementById(minus_option3_name).value = option3;
+                        document.getElementById(minus_option3_name).value = option3_val;
                     }
 
                     prd_total_price = parseInt(prd_price);
@@ -778,6 +855,19 @@
             newForm.appendTo('body');
             newForm.submit();
         }
+
+        function myPayway(val)
+        {
+            if(val == deposit)
+            {
+                $("#deposit").show();
+
+            }
+            else
+                $("#deposit").hide();
+
+        }
+
     </script>
 </body>
 </html>
