--- a/main/templates/common/footer.html
+++ b/main/templates/common/footer.html
@@ -11,7 +11,7 @@
                             <p>런코딩 </p>
                         </li>
                         <li>
-                            <span>CPO</span>
+                            <span>CEO</span>
                             <p>김하나</p>
                         </li>
                         <li>
@@ -28,7 +28,7 @@
                         </li>
                          <li>
                             <span>Address</span>
-                            <p>경기도 수원시 영통구 영통로 200</p>
+                            <p>경기도 수원시 영통구 영통로 200번길 20</p>
                         </li>
                     </ul>
                 </div>
