--- a/main/templates/runAdmin/deposit_list.html
+++ b/main/templates/runAdmin/deposit_list.html
@@ -37,12 +37,13 @@
                 <tr class="row">
 <!--                    <th class="admin_list_check">&nbsp;</th>-->
                     <th class="admin_list">이름</th>
+                    <th class="admin_list_id">아이디</th>
                     <th class="admin_list">주문번호</th>
                     <th class="admin_list">입금자명</th>
                     <th class="admin_list">현금영수증</th>
                     <th class="admin_list">휴대폰 번호</th>
                     <th class="admin_list">결제금액</th>
-                    <th class="admin_list">인증</th>
+                    <th class="admin_list">입금확인</th>
                 </tr>
             </thread>
             <tbody>
@@ -50,20 +51,22 @@
                 <tr class="row">
 <!--                    <td class="admin_list_body"><input type="checkbox" name="idxs[]" value={{forloop.counter0}} onClick="javascript:check();"></td>-->
                     <td class="admin_list_body">{{deposit.pay_user.regi_name}}</td>
+                    <td class="admin_list_id_body">{{deposit.pay_user.regi_email}}</td>
                     <td class="admin_list_body">{{deposit.pay_num}}</td>
                     <td class="admin_list_body">{{deposit.payWay_deposit_name}}</td>
                     <td class="admin_list_body">{{deposit.payWay_deposit_receipt}}</td>
                     <td class="admin_list_body">{{deposit.delivery_phone}}</td>
-                    <td class="admin_list_body">{{deposit.prd_total_price}}</td>
+                    <td class="admin_list_body">
                     {% for myclass in myclass_list %}
                         {% if myclass.pay_num == deposit.pay_num %}
                             {% if myclass.dbstat == 'A' %}
-                            <td class="admin_list_body">확인됨</td>
+                            확인됨
                             {% else %}
-                            <td class="admin_list_body"><a href="javascript:void(0);" onClick="javascript:change({{myclass.myclassList_idx}});" style="cursor:pointer;color:red;"><strong>변경하기</strong></a></td>
+                           <a href="javascript:void(0);" onClick="javascript:change('{{deposit.pay_user.regi_email}}', '{{deposit.pay_num}}');" style="cursor:pointer;color:red;"><strong>강의상태 변경하기</strong></a>
                             {% endif %}
                         {% endif %}
                     {% endfor %}
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -96,7 +99,7 @@
 
      }
 
-     function change(idx)
+     function change(user_id, pay_num)
      {
         var start_date = document.getElementById('start_date');
         var end_date = document.getElementById('end_date');
@@ -112,7 +115,8 @@
         newForm.append($('<input/>', {type: 'hidden', name: 'start_date', value : start_date.value }));
         newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date.value }));
         newForm.append($('<input/>', {type: 'hidden', name: 'searchBox', value : searchBox }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'idx', value : idx }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'user_id', value : user_id }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'pay_num', value : pay_num }));
 
         newForm.appendTo('body');
         newForm.submit();
