--- a/main/templates/runAdmin/pay_list.html
+++ b/main/templates/runAdmin/pay_list.html
@@ -37,12 +37,14 @@
                 <tr class="row">
 <!--                    <th class="admin_list_check">&nbsp;</th>-->
                     <th class="admin_list">이름</th>
+                    <th class="admin_list_id">아이디</th>
                     <th class="admin_list">주문번호</th>
                     <th class="admin_list">주문상태</th>
                     <th class="admin_list">주문방법</th>
-                    <th class="admin_list">구매키트</th>
-                    <th class="admin_list">옵션</th>
+                    <th class="admin_list_id">구매키트(옵션사항)</th>
                     <th class="admin_list">결제금액</th>
+                    <th class="admin_list_id">배송지</th>
+                    <th class="admin_list">배송상태 변경</th>
                 </tr>
             </thread>
             <tbody>
@@ -50,25 +52,47 @@
                 <tr class="row">
 <!--                    <td class="admin_list_body"><input type="checkbox" name="idxs[]" value={{forloop.counter0}} onClick="javascript:check();"></td>-->
                     <td class="admin_list_body">{{deposit.pay_user.regi_name}}</td>
+                    <td class="admin_list_id_body">{{deposit.pay_user.regi_email}}</td>
                     <td class="admin_list_body">{{deposit.pay_num}}</td>
-                    <td class="admin_list_body">{{deposit.pay_user_status}}</td>
-                    <td class="admin_list_body">{{deposit.payWay.value}}</td>
-                    <td class="admin_list_body">{{deposit.prd_info}}</td>
-                    <td class="admin_list_body">{{deposit.prd_info}}</td>
-                    <td class="admin_list_body">{{deposit.prd_total_price}}</td>
-                    {% for myclass in myclass_list %}
-                        {% if myclass.pay_num == deposit.pay_num %}
-                            {% if myclass.dbstat == 'A' %}
-                            <td class="admin_list_body">확인됨</td>
-                            {% else %}
-                            <td class="admin_list_body"><a href="javascript:void(0);" onClick="javascript:change({{myclass.myclassList_idx}});" style="cursor:pointer;color:red;"><strong>변경하기</strong></a></td>
+                    <td class="admin_list_body">{{deposit.pay_user_status.userStatus}}</td>
+                    <td class="admin_list_body">{{deposit.payWay.name}}</td>
+                    <td class="admin_list_id_body">
+                        {% for order in order_info %}
+                            {% if deposit.pay_num == order.pay_num %}
+                                <br/>*****<br/>
+                                {{order.prd.title}} - {{order.count}} 개
+                                {% if order.option1_selectNum == 2 %}
+                                    ({{order.prd.option1}})
+                                {% endif %}
+                                {% if order.option2_selectNum == 2 %}
+                                    ({{order.prd.option2}})
+                                {% endif %}
+                                {% if order.option3_selectNum == 2 %}
+                                    ({{order.prd.option3}})
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
-                    {% endfor %}
+                        {% endfor %}
+                    </td>
+                    <td class="admin_list_body">{{deposit.prd_total_price}}</td>
+                    <td class="admin_list_id_body">{{deposit.delivery_name}}<br/>{{deposit.delivery_addr}}<br/>{{deposit.delivery_phone}}</td>
+                    {% if deposit.pay_result == 0 %}
+                    <td class="admin_list_body"><a href="javascript:void(0);" onClick="javascript:change({{deposit.pay_idx}});" style="cursor:pointer;color:red;"><strong>배송중 변경하기</strong></a></td>
+                    {% elif deposit.pay_result == 100 %}
+                    <td class="admin_list_body">결제전</td>
+                    {% elif deposit.pay_result == 1 %}
+                     <td class="admin_list_body">결제실패</td>
+                    {% elif deposit.pay_result == 2 %}
+                     <td class="admin_list_body">배송완료 변경하기</td>
+                    {% endif %}
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
+
+<!--         <div class="btn-center" style="margin-bottom:40px">-->
+<!--            <a href="javascript:void(0);" class="btn order_complete" onClick="javascript:goPay();">엑셀 다운로드</a>-->
+<!--       </div>-->
+
     </div>
 </div>
 
@@ -97,6 +121,9 @@
 
      }
 
-
+    function change()
+    {
+    <!-- 배송상태 변경 pay_result = 2 user_status = 배송중입니다.-->
+    }
     </script>
 </body></html>
