--- a/main/templates/runAdmin/pay_list.html
+++ b/main/templates/runAdmin/pay_list.html
@@ -30,9 +30,11 @@
         </div>
     </div>
 
-    <div style="margin-left: 300px; width: 1128px; font-size: 20px !important;">total : {{total_count}}</div>
+    <div style="margin-left: 300px; width: 1128px; font-size: 20px !important; padding-bottom:10px;">total : {{total_count}}
+        <button type="button" style="color:#fff; background-color:#101a4e;	border-color#101a4e; float:right; border-radius:5em; font-size: 20px" onclick="fnExcelReport('payList');">Excel</button>
+    </div>
     <div style="overflow: hidden; position: relative; border: 0px; width: 100%;">
-        <table style="margin-left: 300px; width: 1128px;">
+        <table id="payList" style="margin-left: 300px; width: 1128px;">
             <thread>
                 <tr class="row">
 <!--                    <th class="admin_list_check">&nbsp;</th>-->
@@ -89,9 +91,6 @@
             </tbody>
         </table>
 
-<!--         <div class="btn-center" style="margin-bottom:40px">-->
-<!--            <a href="javascript:void(0);" class="btn order_complete" onClick="javascript:goPay();">엑셀 다운로드</a>-->
-<!--       </div>-->
 
     </div>
 </div>
@@ -100,10 +99,15 @@
 
      function goSearch()
      {
+        var start_date = document.getElementById('start_date').value;
+        var end_date = document.getElementById('end_date').value;
+        var searchBox = $('[name=search_box]').val();
 
-        var start_date = document.getElementById('start_date');
-        var end_date = document.getElementById('end_date');
-        var searchBox = $('[name=search_box]').val()
+        if(start_date == "" || end_date == "")
+        {
+            alert("날짜선택하세요");
+            return false;
+        }
 
         var newForm = $('<form></form>');
 
@@ -112,14 +116,72 @@
         newForm.attr("action", "/pay_search/");
 
         newForm.append($('<input/>', {type: 'hidden', name: 'csrfmiddlewaretoken', value : '{{ csrf_token }}'}));
-        newForm.append($('<input/>', {type: 'hidden', name: 'start_date', value : start_date.value }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date.value }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'start_date', value : start_date }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date }));
         newForm.append($('<input/>', {type: 'hidden', name: 'searchBox', value : searchBox }));
 
         newForm.appendTo('body');
         newForm.submit();
 
      }
+
+     function fnExcelReport(id)
+     {
+        var start_date = document.getElementById('start_date').value;
+        var end_date = document.getElementById('end_date').value;
+
+        if(start_date == "" || end_date == "")
+        {
+            alert("날짜선택하세요");
+            return false;
+        }
+
+        var tab_text = '<html xmlns:x="urn:schemas-microsoft-com:office:excel">';
+        tab_text = tab_text + '<head><meta http-equiv="content-type" content="application/vnd.ms-excel; charset=UTF-8">';
+        tab_text = tab_text + '<xml><x:ExcelWorkbook><x:ExcelWorksheets><x:ExcelWorksheet>'
+        tab_text = tab_text + '<x:Name>Test Sheet</x:Name>';
+        tab_text = tab_text + '<x:WorksheetOptions><x:Panes></x:Panes></x:WorksheetOptions></x:ExcelWorksheet>';
+        tab_text = tab_text + '</x:ExcelWorksheets></x:ExcelWorkbook></xml></head><body>';
+        tab_text = tab_text + "<table border='1px'>";
+
+        var exportTable = $('#' + id).clone();
+        exportTable.find('input').each(function (index, elem) { $(elem).remove(); });
+        tab_text = tab_text + exportTable.html();
+        tab_text = tab_text + '</table></body></html>';
+        var data_type = 'data:application/vnd.ms-excel';
+        var ua = window.navigator.userAgent;
+        var msie = ua.indexOf("MSIE ");
+
+
+        title = start_date + "-" + end_date;
+        var fileName = title + '.xls';
+
+        //Explorer 환경에서 다운로드
+        if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./))
+        {
+            if (window.navigator.msSaveBlob)
+            {
+                var blob = new Blob([tab_text], {
+                    type: "application/csv;charset=utf-8;"
+                });
+                navigator.msSaveBlob(blob, fileName);
+            }
+        }
+        else
+        {
+            var blob2 = new Blob([tab_text], {
+                type: "application/csv;charset=utf-8;"
+            });
+            var filename = fileName;
+            var elem = window.document.createElement('a');
+            elem.href = window.URL.createObjectURL(blob2);
+            elem.download = filename;
+            document.body.appendChild(elem);
+            elem.click();
+            document.body.removeChild(elem);
+        }
+     }
+
 
     function change()
     {
