--- a/main/templates/runAdmin/pay_list.html
+++ b/main/templates/runAdmin/pay_list.html
@@ -21,7 +21,15 @@
                      <input type="date" name="end_date" id="end_date" value="{{end_date}}">
                 </div>
                 <div class="input_area_lounge">
-                     <input type="text" name="search_box" id="search_box" placeholder="아이디 검색해 보세요.">
+                      <select id="status" name="status" style="width:200px; height:35px; border:1px solid #d4d4d4; line-height:30px; font-size:12px;">
+                        <option value="0">-----------사용자 상태------</option>
+                        {% for userStatus in userStatus_info %}
+                            <option value={{userStatus.userStatus_idx}}>{{userStatus.userStatus}}</option>
+                        {% endfor %}
+                     </select>
+                </div>
+                <div class="input_area_lounge">
+                     <input type="text" name="search_box" id="search_box" value='{{search}}' placeholder="아이디 or 주문번호">
                 </div>
                  <div class="btn_area">
                     <a class="btn" href="javascript:void(0);" onclick="javascript:goSearch();">&nbsp;조회하기&nbsp;</a>
@@ -30,18 +38,18 @@
         </div>
     </div>
 
-    <div style="margin-left: 300px; width: 1128px; font-size: 20px !important; padding-bottom:10px;">total : {{total_count}}
-        <button type="button" style="color:#fff; background-color:#101a4e;	border-color#101a4e; float:right; border-radius:5em; font-size: 20px" onclick="fnExcelReport('payList');">Excel</button>
+    <div style="margin-left: 300px; width: 1130px; font-size: 20px !important; padding-bottom:10px;">total : {{total_count}}
+        <button type="button" style="color:#fff; background-color:#101a4e;	border-color:#101a4e; float:right; border-radius:5em; font-size: 20px" onclick="fnExcelReport('payList');">Excel</button>
     </div>
     <div style="overflow: hidden; position: relative; border: 0px; width: 100%;">
-        <table id="payList" style="margin-left: 300px; width: 1128px;">
+        <table id="payList" style="margin-left: 300px; width: 1130px;">
             <thread>
                 <tr class="row">
-<!--                    <th class="admin_list_check">&nbsp;</th>-->
+                    <th class="admin_list_check">&nbsp;</th>
                     <th class="admin_list">이름</th>
                     <th class="admin_list_id">아이디</th>
-                    <th class="admin_list">주문번호</th>
-                    <th class="admin_list">주문상태</th>
+                    <th class="admin_list_id">주문번호</th>
+                    <th class="admin_list_id">사용자 상태</th>
                     <th class="admin_list">주문방법</th>
                     <th class="admin_list_id">구매키트(옵션사항)</th>
                     <th class="admin_list">결제금액</th>
@@ -52,11 +60,16 @@
             <tbody>
                 {% for deposit in pay_info %}
                 <tr class="row">
-<!--                    <td class="admin_list_body"><input type="checkbox" name="idxs[]" value={{forloop.counter0}} onClick="javascript:check();"></td>-->
+                    <td class="admin_list_body">
+                         {% if deposit.pay_result == 0 %}
+                        <input type="checkbox" name="idxs[]" value={{deposit.pay_idx}}"></td>
+                        {%else%}
+                        <input type="checkbox" disabled name="idxs[]" value={{deposit.pay_idx}}"></td>
+                        {% endif %}
                     <td class="admin_list_body">{{deposit.pay_user.regi_name}}</td>
                     <td class="admin_list_id_body">{{deposit.pay_user.regi_email}}</td>
-                    <td class="admin_list_body">{{deposit.pay_num}}</td>
-                    <td class="admin_list_body">{{deposit.pay_user_status.userStatus}}</td>
+                    <td class="admin_list_id_body">{{deposit.pay_num}}</td>
+                    <td class="admin_list_id_body">{{deposit.pay_user_status.userStatus}}</td>
                     <td class="admin_list_body">{{deposit.payWay.name}}</td>
                     <td class="admin_list_id_body">
                         {% for order in order_info %}
@@ -78,24 +91,32 @@
                     <td class="admin_list_body">{{deposit.prd_total_price}}</td>
                     <td class="admin_list_id_body">{{deposit.delivery_name}}<br/>{{deposit.delivery_addr}}<br/>{{deposit.delivery_phone}}</td>
                     {% if deposit.pay_result == 0 %}
-                    <td class="admin_list_body"><a href="javascript:void(0);" onClick="javascript:change({{deposit.pay_idx}});" style="cursor:pointer;color:red;"><strong>배송중 변경하기</strong></a></td>
+                        {% if ok_status == deposit.pay_user_status.userStatus_idx %}
+                        <td class="admin_list_body"><a href="javascript:void(0);" onClick="javascript:change({{deposit.pay_idx}});" style="cursor:pointer;color:red;"><strong>배송중 변경하기</strong></a></td>
+                        {% else %}
+                        <td class="admin_list_body">배송중</td>
+                        {% endif %}
                     {% elif deposit.pay_result == 100 %}
                     <td class="admin_list_body">결제전</td>
                     {% elif deposit.pay_result == 1 %}
                      <td class="admin_list_body">결제실패</td>
-                    {% elif deposit.pay_result == 2 %}
-                     <td class="admin_list_body">배송완료 변경하기</td>
                     {% endif %}
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
+    </div>
 
-
+    <div style="margin-left: 300px; width: 1130px; font-size: 20px !important; padding-top:50px; padding-bottom:150px;">
+        <button type="button" style="color:#fff; background-color:#e1a394;	border-color:#e1a394; float:right; border-radius:5em; font-size: 20px;" onclick="">배송중으로 변경</button>
     </div>
 </div>
 
     <script>
+
+     $(document).ready(function() {
+       $('#status').val('{{status}}').prop("selected",true);
+     });
 
      function goSearch()
      {
@@ -109,6 +130,10 @@
             return false;
         }
 
+        var status = document.getElementById("status").selectedIndex;
+        if(status > 0)
+            status = document.getElementById("status").value;
+
         var newForm = $('<form></form>');
 
         newForm.attr("name", "deposit_search");
@@ -119,6 +144,7 @@
         newForm.append($('<input/>', {type: 'hidden', name: 'start_date', value : start_date }));
         newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date }));
         newForm.append($('<input/>', {type: 'hidden', name: 'searchBox', value : searchBox }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'status', value : status }));
 
         newForm.appendTo('body');
         newForm.submit();
@@ -183,9 +209,37 @@
      }
 
 
-    function change()
+    function change(pay_idx)
     {
-    <!-- 배송상태 변경 pay_result = 2 user_status = 배송중입니다.-->
+        var start_date = document.getElementById('start_date').value;
+        var end_date = document.getElementById('end_date').value;
+        var searchBox = $('[name=search_box]').val();
+
+        if(start_date == "" || end_date == "")
+        {
+            alert("날짜선택하세요");
+            return false;
+        }
+
+        var status = document.getElementById("status").selectedIndex;
+        if(status > 0)
+            status = document.getElementById("status").value;
+
+        var newForm = $('<form></form>');
+
+        newForm.attr("name", "pay_change");
+        newForm.attr("method", "post");
+        newForm.attr("action", "/pay_change/");
+
+        newForm.append($('<input/>', {type: 'hidden', name: 'csrfmiddlewaretoken', value : '{{ csrf_token }}'}));
+        newForm.append($('<input/>', {type: 'hidden', name: 'start_date', value : start_date }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'searchBox', value : searchBox }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'status', value : status }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'pay_idx', value : pay_idx }));
+
+        newForm.appendTo('body');
+        newForm.submit();
     }
     </script>
 </body></html>
