--- a/main/templates/runAdmin/deposit_list.html
+++ b/main/templates/runAdmin/deposit_list.html
@@ -5,8 +5,9 @@
          <div class="tabs section_wrap">
             <ul>
                 <li class="admin_active"><a href="/deposit_list/">무통장 입금 사용자 조회</a></li>
-                &nbsp;&nbsp;
                 <li><a href="/pay_list/">구매 데이터 조회</a></li>
+                <li><a href="https://admin.iamport.kr/users/login" target="_blank">아임포트 관리자</a></li>
+                <li><a href="https://partner.danalpay.com/account/login?next=%2F#" target="_blank">다날 (휴대폰인증)</a></li>
             </ul>
         </div>
     </div>
@@ -135,5 +136,6 @@
         newForm.submit();
 
      }
+
     </script>
 </body></html>
