관리자 모드

--- a/main/templates/runAdmin/deposit_list.html
+++ b/main/templates/runAdmin/deposit_list.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <div class="codingLounge_list">
+    <div class="codingLounge_list" style="margin-left:280px;">
         <div class="filter_area fixed">
             <div class="search_area">
                 <div class="input_area_lounge">
